Added a "Tests/" subdirectory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = Include Lib Simulator Tools
+SUBDIRS = Include Lib Simulator Tools Tests
 
 EXTRA_DIST = Makefile.extra README.Win32 README.autoconf README.running Thanks
 
