--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -347,6 +347,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1998/04/25 15:12:12  curt
+# Misc. tweaks.
+#
 # Revision 1.4  1998/04/24 00:44:05  curt
 # Added zlib support.
 #
