--- a/DemRaw2ascii/Makefile.in
+++ b/DemRaw2ascii/Makefile.in
@@ -343,6 +343,9 @@ INCLUDES +=
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.3  1998/04/25 15:12:11  curt
+# Misc. tweaks.
+#
 # Revision 1.2  1998/04/24 00:44:04  curt
 # Added zlib support.
 #
