--- a/SplitTris/Makefile.in
+++ b/SplitTris/Makefile.in
@@ -349,6 +349,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1998/04/25 15:12:13  curt
+# Misc. tweaks.
+#
 # Revision 1.4  1998/04/24 00:44:06  curt
 # Added zlib support.
 #
