--- a/Tri2obj/Makefile.in
+++ b/Tri2obj/Makefile.in
@@ -349,6 +349,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1998/04/25 15:12:14  curt
+# Misc. tweaks.
+#
 # Revision 1.4  1998/04/24 00:44:07  curt
 # Added zlib support.
 #
