--- a/FixNode/Makefile.in
+++ b/FixNode/Makefile.in
@@ -371,8 +371,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.5  1998/04/25 15:12:12  curt
-# Misc. tweaks.
+# Revision 1.6  1998/04/26 05:02:06  curt
+# Added #ifdef HAVE_STDLIB_H
 #
 # Revision 1.3  1998/04/18 04:02:54  curt
 # Added zlib support in placed and other misc. tweaks.
