--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -347,8 +347,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.6  1998/04/26 05:02:12  curt
-# Tweaks
+# Revision 1.7  1998/04/26 13:37:13  curt
+# Removed DemInfo for now.
 #
 # Revision 1.4  1998/04/24 00:44:05  curt
 # Added zlib support.
