--- a/FixNode/Makefile.in
+++ b/FixNode/Makefile.in
@@ -371,8 +371,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.7  1998/04/26 13:37:12  curt
-# Removed DemInfo for now.
+# Revision 1.8  1998/04/28 01:24:10  curt
+# Updates ...
 #
 # Revision 1.3  1998/04/18 04:02:54  curt
 # Added zlib support in placed and other misc. tweaks.
