typedef-ified fgCartesianPoint3d

--- a/Makefile.in
+++ b/Makefile.in
@@ -78,6 +78,7 @@ EXTRA_DIST = \
 	fg_limits.h \
 	fg_typedefs.h \
 	fg_types.h \
+	fg_zlib.h \
 	general.h \
 	keys.h
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
