--- a/Math/Makefile.am
+++ b/Math/Makefile.am
@@ -10,7 +10,7 @@ libMath_la_SOURCES = \
 	fg_random.c fg_random.h \
 	interpolater.cxx interpolater.hxx \
 	mat3.h mat3defs.h mat3err.h \
-	polar.c polar.h \
+	polar3d.c polar3d.h \
 	vector.c vector.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
