--- a/FixNode/Makefile.in
+++ b/FixNode/Makefile.in
@@ -371,8 +371,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.8  1998/04/28 01:24:10  curt
-# Updates ...
+# Revision 1.9  1998/05/02 01:54:35  curt
+# Converting to polar3d.h routines.
 #
 # Revision 1.3  1998/04/18 04:02:54  curt
 # Added zlib support in placed and other misc. tweaks.
