Added Tests/ to clean-deps. Updated Win32 build notes.

--- a/Makefile.extra
+++ b/Makefile.extra
@@ -9,7 +9,7 @@ ROOT=fg-$(VERSION)
 # clean up dependencies
 clean-deps:
 	rm -rf .deps \
-	Lib/.deps Simulator/.deps Tools/.deps \
+	Lib/.deps Simulator/.deps Tools/.deps Test/.deps \
 	Lib/*/.deps Simulator/*/.deps Tools/*/.deps \
 	Lib/*/*/.deps Simulator/*/*/.deps Tools/*/*/.deps
 
