--- a/Main/runfg.bat.in
+++ b/Main/runfg.bat.in
@@ -3,7 +3,7 @@ REM @ECHO OFF
 REM Skip ahead to CONT1 if FG_ROOT has a value
 IF NOT %FG_ROOT%.==. GOTO CONT1
 
-SET FG_ROOT=@prefix@
+SET FG_ROOT=.
 
 :CONT1
 
@@ -12,7 +12,7 @@ IF NOT EXIST %FG_ROOT%\BIN\FG.EXE GOTO ERROR1
 
 REM Now that FG_ROOT has been set, run the program
 ECHO FG_ROOT = %FG_ROOT%
-%FG_ROOT%\BIN\FG.EXE
+%FG_ROOT%\BIN\FG.EXE %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 GOTO END
 
