--- a/AssemTris/Makefile.in
+++ b/AssemTris/Makefile.in
@@ -344,8 +344,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.10  1998/05/07 23:16:05  curt
-# ...
+# Revision 1.11  1998/05/13 18:30:14  curt
+# Updated ...
 #
 # Revision 1.2  1998/04/14 02:25:59  curt
 # Code reorganizations.  Added a Lib/ directory for more general libraries.
