--- a/FixNode/Makefile.in
+++ b/FixNode/Makefile.in
@@ -371,8 +371,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.10  1998/05/07 23:16:10  curt
-# ...
+# Revision 1.11  1998/05/13 18:30:19  curt
+# Updated ...
 #
 # Revision 1.3  1998/04/18 04:02:54  curt
 # Added zlib support in placed and other misc. tweaks.
