--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -347,8 +347,8 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.10  1998/05/07 23:16:11  curt
-# ...
+# Revision 1.11  1998/05/13 18:30:20  curt
+# Updated ...
 #
 # Revision 1.4  1998/04/24 00:44:05  curt
 # Added zlib support.
