--- a/FixObj/Makefile.in
+++ b/FixObj/Makefile.in
@@ -347,8 +347,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.12  1998/05/16 13:11:25  curt
-# Fixed an off by one error in node, normal, and face counters.
+# Revision 1.13  1998/05/20 20:55:18  curt
+# Fixed arbitrary polygon winding problem here so all tristrips are passed
+# to runtime simulator with a consistant counter clockwise winding.
 #
 # Revision 1.4  1998/04/24 00:44:05  curt
 # Added zlib support.
