--- a/DemRaw2ascii/Makefile.in
+++ b/DemRaw2ascii/Makefile.in
@@ -343,8 +343,8 @@ INCLUDES +=
 
 #---------------------------------------------------------------------------
 # $Log$
-# Revision 1.9  1998/05/13 18:30:18  curt
-# Updated ...
+# Revision 1.10  1998/05/20 20:55:46  curt
+# Makefile tweaks
 #
 # Revision 1.2  1998/04/24 00:44:04  curt
 # Added zlib support.
