Added tile.cxx and tile.hxx. Working on rewriting the tile management system so a tile is just a list fragments, and the fragment record contains the display list for that fragment.

--- a/Scenery/Makefile.am
+++ b/Scenery/Makefile.am
@@ -6,6 +6,7 @@ libScenery_la_SOURCES = \
 	obj.cxx obj.hxx \
 	scenery.cxx scenery.hxx \
 	texload.c texload.h \
+	tile.cxx tile.hxx \
 	tilecache.cxx tilecache.hxx \
 	tilemgr.cxx tilemgr.hxx
 
