EGCS addendum to README.Win32 Added Tests/ to clean-deps in Makefile.extra Additional credits in Thanks. Tweaked configure.in to add Win32 specific things if #include <windows.h>   exists, rather than just if it's a cygwin32 environment.

--- a/Makefile.extra
+++ b/Makefile.extra
@@ -11,7 +11,8 @@ clean-deps:
 	rm -rf .deps \
 	Lib/.deps Simulator/.deps Tools/.deps Test/.deps \
 	Lib/*/.deps Simulator/*/.deps Tools/*/.deps \
-	Lib/*/*/.deps Simulator/*/*/.deps Tools/*/*/.deps
+	Lib/*/*/.deps Simulator/*/*/.deps Tools/*/*/.deps \
+	Tests/.deps
 
 clean-libs:
 	rm -rf .libs Lib/.libs Simulator/.libs Tools/.libs \
