Removed derived file "configure" from version control. Added Lib/Audio contributed by Steve Baker (Linux only for this version.)

--- a/configure.in
+++ b/configure.in
@@ -133,6 +133,7 @@ AC_OUTPUT( \
 	Makefile \
 	Include/Makefile \
 	Lib/Makefile \
+	Lib/Audio/Makefile \
 	Lib/Bucket/Makefile \
 	Lib/Debug/Makefile \
 	Lib/DEM/Makefile \
