Added a Lib/Audio for Steve Baker's sound library.

--- a/Lib/Makefile.am
+++ b/Lib/Makefile.am
@@ -1,1 +1,7 @@
-SUBDIRS = Bucket Debug DEM Math XGL zlib
+if HAVE_OSS_AUDIO
+AUDIO_DIRS = Audio
+else
+AUDIO_DIRS = 
+endif
+
+SUBDIRS = $(AUDIO_DIRS) Bucket Debug DEM Math XGL zlib
