--- a/configure.in
+++ b/configure.in
@@ -23,20 +23,32 @@ AM_MAINTAINER_MODE
 dnl Check to see if this `configure' is being run in the `Cygwin32' environment
 AM_CYGWIN32
 
+dnl Using AM_CONDITIONAL is a step out of the protected little 
+dnl automake fold so it is potentially dangerous.  But, we are
+dnl beginning to run into cases where the standard checks are not
+dnl enough.  AM_CONDITIONALS are then referenced to conditionally
+dnl build a Makefile.in from a Makefile.am which lets us define custom
+dnl includes, compile alternative source files, etc.
 dnl Check for Linux style audio support
+
+AM_CONDITIONAL(HAVE_DAYLIGHT, grep daylight /usr/include/time.h )
+
+AM_CONDITIONAL(HAVE_TIMEZONE, grep timezone /usr/include/time.h )
+
 AM_CONDITIONAL(HAVE_OSS_AUDIO, \
 	test -r /usr/include/soundcard.h -o -r /usr/include/linux/soundcard.h )
 
 AC_CHECK_HEADER(windows.h)
 
 dnl extra library and include directories
-if test "x$am_cv_header_windows_h" = "xyes" ; then
-    wi_EXTRA_DIRS(no, /store /usr/local /local /user/local /usr/share \
-	/usr/X11R6 /opt/X11R6 `pwd`/Win32)
-else
-    wi_EXTRA_DIRS(no, /store /usr/local /local /user/local /usr/share \
-	/usr/X11R6 /opt/X11R6)
+EXTRA_DIRS="/usr/local /usr/X11R6 /opt/X11R6"
+
+if test "x$ac_cv_header_windows_h" = "xyes" ; then
+    EXTRA_DIRS="${EXTRA_DIRS} `pwd`/Win32"
+# elif test `uname -s` = "SunOS" ; then
+#   EXTRA_DIRS="${EXTRA_DIRS} `pwd`/SunOS"
 fi
+wi_EXTRA_DIRS(no, ${EXTRA_DIRS})
 
 dnl Check for X11 (fancy)
 AC_PATH_XTRA
@@ -52,6 +64,9 @@ AC_CHECK_LIB(ICE, IceOpenConnection)
 AC_CHECK_LIB(SM, SmcOpenConnection)
 AC_CHECK_LIB(Xt, XtMalloc)
 AC_CHECK_LIB(Xmu, XmuLookupStandardColormap)
+
+# dnl Solaris OpenGL pain
+# AC_CHECK_LIB(eprintf, __eprintf)
 
 AC_CHECK_LIB(GLcore, glNewList)
 if test "x$ac_cv_lib_GLcore_glNewList" = "xno" ; then
@@ -164,6 +179,7 @@ AC_OUTPUT( \
 	Tools/Makefile \
 	Tools/AssemTris/Makefile \
 	Tools/Dem2node/Makefile \
+	Tools/DemInfo/Makefile \
 	Tools/DemRaw2ascii/Makefile \
 	Tools/FixNode/Makefile \
 	Tools/FixObj/Makefile \
@@ -172,4 +188,4 @@ AC_OUTPUT( \
 	Tools/Tri2obj/Makefile \
 	Tools/Triangle/Makefile \
 	Tests/Makefile \
-	)
+)
