Incorporated some automake conditionals to try to support mktime() correctly on a wider variety of platforms. Added the declaration of memmove needed by the stl which apparently solaris only defines for cc compilations and not for c++ (__STDC__)

--- a/Time/Makefile.am
+++ b/Time/Makefile.am
@@ -1,3 +1,11 @@
+if HAVE_DAYLIGHT
+DEFS += -DHAVE_DAYLIGHT
+endif
+
+if HAVE_TIMEZONE
+DEFS += -DHAVE_TIMEZONE
+endif
+
 libdir	= ${exec_prefix}/lib
 
 lib_LTLIBRARIES = libTime.la
