Added support for Pui/Gui. Converted fog to GL_FOG_EXP2. Link to static simulator parts. Update runfg.bat to try to be a little smarter.

--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -19,22 +19,24 @@ fg_SOURCES = \
 	views.cxx views.hxx
 
 fg_LDADD = \
-	$(top_builddir)/Simulator/Aircraft/libAircraft.la \
-	$(top_builddir)/Simulator/Astro/libAstro.la \
-	$(top_builddir)/Simulator/Autopilot/libAutopilot.la \
-	$(top_builddir)/Simulator/Cockpit/libCockpit.la \
-	$(top_builddir)/Simulator/Controls/libControls.la \
-	$(top_builddir)/Simulator/Flight/libFlight.la \
-	$(top_builddir)/Simulator/Flight/LaRCsim/libLaRCsim.la \
-	$(top_builddir)/Simulator/Flight/Slew/libSlew.la \
-	$(top_builddir)/Simulator/Scenery/libScenery.la \
-	$(top_builddir)/Simulator/Time/libTime.la \
-	$(top_builddir)/Simulator/Weather/libWeather.la \
-        $(top_builddir)/Simulator/Joystick/libJoystick.la \
+	$(top_builddir)/Simulator/Aircraft/libAircraft.a \
+	$(top_builddir)/Simulator/Astro/libAstro.a \
+	$(top_builddir)/Simulator/Autopilot/libAutopilot.a \
+	$(top_builddir)/Simulator/Cockpit/libCockpit.a \
+	$(top_builddir)/Simulator/Controls/libControls.a \
+	$(top_builddir)/Simulator/Flight/libFlight.a \
+	$(top_builddir)/Simulator/Flight/LaRCsim/libLaRCsim.a \
+	$(top_builddir)/Simulator/Flight/Slew/libSlew.a \
+	$(top_builddir)/Simulator/Gui/libGui.a \
+	$(top_builddir)/Simulator/Scenery/libScenery.a \
+	$(top_builddir)/Simulator/Time/libTime.a \
+	$(top_builddir)/Simulator/Weather/libWeather.a \
+        $(top_builddir)/Simulator/Joystick/libJoystick.a \
 	$(AUDIO_LIBS) \
 	$(top_builddir)/Lib/Math/libMath.la \
 	$(top_builddir)/Lib/Bucket/libBucket.la \
 	$(top_builddir)/Lib/Debug/libDebug.la \
+	$(top_builddir)/Lib/Pui/libPui.la \
 	$(top_builddir)/Lib/zlib/libz.la
 
 INCLUDES += \
