--- a/Main/runfg.bat.in
+++ b/Main/runfg.bat.in
@@ -1,23 +1,28 @@
 REM @ECHO OFF
 
-REM Skip ahead to CONT1 if FG_ROOT has a value
-IF NOT %FG_ROOT%.==. GOTO CONT1
+REM Skip ahead to RUN1 if %FG_ROOT%\BIN\FG.EXE exists
+IF EXIST %FG_ROOT%\BIN\FG.EXE GOTO RUN1
 
+REM %FG_ROOT% wasn't set right so let's try "."
 SET FG_ROOT=.
+IF EXIST %FG_ROOT%\BIN\FG.EXE GOTO RUN1
 
-:CONT1
+REM %FG_ROOT% wasn't set right so let's try ".."
+SET FG_ROOT=..
+IF EXIST %FG_ROOT%\BIN\FG.EXE GOTO RUN1
 
-REM Check for the existance of the executable
-IF NOT EXIST %FG_ROOT%\BIN\FG.EXE GOTO ERROR1
+REM %FG_ROOT% wasn't set right so let's try "@prefix@"
+SET FG_ROOT=@prefix@
+IF EXIST %FG_ROOT%\BIN\FG.EXE GOTO RUN1
 
+ECHO Cannot find %FG_ROOT%\BIN\FG.EXE
+GOTO END
+
+:RUN1
 REM Now that FG_ROOT has been set, run the program
 ECHO FG_ROOT = %FG_ROOT%
 %FG_ROOT%\BIN\FG.EXE %1 %2 %3 %4 %5 %6 %7 %8 %9
 
-GOTO END
-
-:ERROR1
-ECHO Cannot find %FG_ROOT%\BIN\FG.EXE
 GOTO END
 
 :END
