Build only static libraries. Declare memmove/memset for Sloaris. Rewrote fg_time.c routine to get LST start seconds to better handle   Solaris, and be easier to port, and understand the GMT vs. local   timezone issues.

--- a/Time/Makefile.am
+++ b/Time/Makefile.am
@@ -6,11 +6,9 @@ if HAVE_TIMEZONE
 DEFS += -DHAVE_TIMEZONE
 endif
 
-libdir	= ${exec_prefix}/lib
+noinst_LIBRARIES = libTime.a
 
-lib_LTLIBRARIES = libTime.la
-
-libTime_la_SOURCES = \
+libTime_a_SOURCES = \
 	event.cxx event.hxx \
 	fg_time.cxx fg_time.hxx \
 	fg_timer.cxx fg_timer.hxx \
