--- a/Autopilot/Makefile.am
+++ b/Autopilot/Makefile.am
@@ -1,7 +1,5 @@
-libdir	= ${exec_prefix}/lib
+noinst_LIBRARIES = libAutopilot.a
 
-lib_LTLIBRARIES = libAutopilot.la
-
-libAutopilot_la_SOURCES = autopilot.c autopilot.h
+libAutopilot_a_SOURCES = autopilot.c autopilot.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
