--- a/FDM/Makefile.am
+++ b/FDM/Makefile.am
@@ -1,9 +1,7 @@
 SUBDIRS	= LaRCsim Slew
 
-libdir	= ${exec_prefix}/lib
+noinst_LIBRARIES = libFlight.a
 
-lib_LTLIBRARIES = libFlight.la
-
-libFlight_la_SOURCES = flight.c flight.h
+libFlight_a_SOURCES = flight.c flight.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
