--- a/Joystick/Makefile.am
+++ b/Joystick/Makefile.am
@@ -1,7 +1,5 @@
-libdir	= ${exec_prefix}/lib
+noinst_LIBRARIES = libJoystick.a
 
-lib_LTLIBRARIES = libJoystick.la
-
-libJoystick_la_SOURCES = joystick.c joystick.h
+libJoystick_a_SOURCES = joystick.c joystick.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
