Pui -> PUI, Gui -> GUI.

--- a/GUI/Makefile.am
+++ b/GUI/Makefile.am
@@ -1,5 +1,5 @@
-noinst_LIBRARIES = libGui.a
+noinst_LIBRARIES = libGUI.a
 
-libGui_a_SOURCES = gui.cxx gui.h
+libGUI_a_SOURCES = gui.cxx gui.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
