Incorporated Friedemann Reinhard's <mpt218@faupt212.physik.uni-erlangen.de> first pass at an isntrument panel.

--- a/Cockpit/Makefile.am
+++ b/Cockpit/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libCockpit.a
 
 libCockpit_a_SOURCES = \
 	cockpit.cxx cockpit.hxx \
-	hud.cxx hud.hxx
+	hud.cxx hud.hxx \
+	panel.cxx panel.h
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
