A few small rearrangements and tweaks.

--- a/Cockpit/Makefile.am
+++ b/Cockpit/Makefile.am
@@ -3,6 +3,6 @@ noinst_LIBRARIES = libCockpit.a
 libCockpit_a_SOURCES = \
 	cockpit.cxx cockpit.hxx \
 	hud.cxx hud.hxx \
-	panel.cxx panel.h
+	panel.cxx panel.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
