Added support for switching between fullscreen and window mode for Mesa/3dfx/glide.
Added a basic splash screen.  Restructured the main loop and top level
initialization routines to do this.

Hacked in some support for playing a startup mp3 sound file while rest
of sim initializes.  Currently only works in Unix using the mpg123 player.
Waits for the mpg123 player to finish before initializing internal
sound drivers.

--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -22,6 +22,7 @@ fg_SOURCES = \
 	fg_config.h \
 	fg_init.cxx fg_init.hxx \
 	options.cxx options.hxx \
+	splash.cxx splash.hxx \
 	views.cxx views.hxx
 
 fg_LDADD = \
