polar3d.[ch] renamed to polar3d.[ch]xx, vector.[ch] renamed to vector.[ch]xx Updated fg_geodesy comments to reflect that routines expect and produce   meters.

--- a/Math/Makefile.am
+++ b/Math/Makefile.am
@@ -10,7 +10,7 @@ libMath_la_SOURCES = \
 	fg_random.c fg_random.h \
 	interpolater.cxx interpolater.hxx \
 	mat3.h mat3defs.h mat3err.h \
-	polar3d.c polar3d.h \
-	vector.c vector.h
+	polar3d.cxx polar3d.hxx \
+	vector.cxx vector.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
