--- a/Tri2obj/Makefile.am
+++ b/Tri2obj/Makefile.am
@@ -26,7 +26,7 @@
 
 bin_PROGRAMS = tri2obj
 
-tri2obj_SOURCES = tri2obj.c tri2obj.h
+tri2obj_SOURCES = tri2obj.cxx tri2obj.hxx
 
 tri2obj_LDADD = \
 	$(top_builddir)/Lib/Bucket/libBucket.la \
@@ -39,6 +39,9 @@ INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1998/07/08 14:49:14  curt
+# tweaks.
+#
 # Revision 1.4  1998/04/24 00:44:07  curt
 # Added zlib support.
 #
