Added README.Unix No longer using libtool.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = Include Lib Simulator Tools Tests
 
-EXTRA_DIST = Makefile.extra README.Win32 README.autoconf README.running \
-	Thanks acsite.m4
+EXTRA_DIST = Makefile.extra README.Unix README.Win32 README.autoconf \
+	README.running Thanks acsite.m4
 
 dist-hook:
 	tar cf - Hints | (cd $(distdir); tar xvf -)
